Tweaks to hawk QC scripts -wroking

--- a/workflow/scripts/snATACseq_QC.Rmd
+++ b/workflow/scripts/snATACseq_QC.Rmd
@@ -100,7 +100,7 @@ ridge_plot
 
 
 ```{R, Clusters, echo=FALSE, , fig.height = 10, fig.width = 10}
-print(group_plot)
+print(group_plot_Clusters)
 ```
 
 ***
